refactor: Replace explicit types with `var` and migrate `ProcessingResult` to record
- Replaced explicit types with `var` across core and test modules for conciseness and modern syntax.
- Converted `ProcessingResult` class to a Java record, simplifying code and reducing boilerplate.
- Updated tests and callback logic to align with the new `ProcessingResult` record accessors.